Review comments for PR324 processed.

--- a/pointerevents/pointerevent_pointerleave_pen.html
+++ b/pointerevents/pointerevent_pointerleave_pen.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
     <head>
         <title>Pointer Event: Dispatch pointerleave (pen). </title>
@@ -8,19 +8,20 @@
         <link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
         <!-- http://w3c-test.org/resources/testharness.js -->
         <script src="http://w3c-test.org/resources/testharness.js"></script>
+        <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
         <!-- Additional helper script for common checks across event types -->
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
             var detected_pointertypes = {};
-            var test_pointerEvent = async_test("pointerleave event");  // set up test harness
+            var test_pointerEvent = async_test("pointerleave event"); // set up test harness
             // showPointerTypes is defined in pointerevent_support.js
             // Requirements: the callbakc function will reference the test_pointerEvent object and
             // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
-            
+
             function run() {
                 var target0 = document.getElementById("target0");
-            
+
                 on_event(target0, "pointerleave", function (event) {
                     check_PointerEvent(event);
                     test_pointerEvent.step(function () {
@@ -35,16 +36,16 @@
     </head>
     <body onload="run()">
         <h1>Pointer Event: Dispatch pointerleave (pen)</h1>
-        <h4> 
-            Test Description: 
-            When a pointing device that supports hover (pen stylus) leaves the range of the digitizer while over an element, the pointerleave event must be dispatched.    
+        <h4>
+            Test Description:
+            When a pointing device that supports hover (pen stylus) leaves the range of the digitizer while over an element, the pointerleave event must be dispatched.
         </h4>
         <br />
         <div id="target0">
             Use a pen to hover over then lift up away from this element.
         </div>
         <div id="complete-notice">
-            <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
+            <p>Test complete: Scroll to Summary to view Pass/Fail Results.</p>
             <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
         </div>
         <div id="log"></div>
