--- a/pointerevents/pointerevent_pointerup.html
+++ b/pointerevents/pointerevent_pointerup.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="pointerevent_styles.css">
         <script src="http://w3c-test.org/resources/testharness.js"></script>
+        <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
         <!-- Additional helper script for common checks across event types -->
         <script type="text/javascript" src="pointerevent_support.js"></script>
     </head>
@@ -19,18 +20,18 @@
             // Requirements: the callbakc function will reference the test_pointerEvent object and
             // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
-            
+
             function run() {
-            	var target0 = document.getElementById("target0");
-            
-            	on_event(target0, "pointerup", function (event) {
-            		detected_pointertypes[event.pointerType] = true;
-            		test_pointerEvent.step(function () {
-            			check_PointerEvent(event);
-            			assert_equals(event.type, "pointerup", "Pointer Event received.");
-            		});
-            		test_pointerEvent.done();
-            	});
+                var target0 = document.getElementById("target0");
+
+                on_event(target0, "pointerup", function (event) {
+                    detected_pointertypes[event.pointerType] = true;
+                    test_pointerEvent.step(function () {
+                        check_PointerEvent(event);
+                        assert_equals(event.type, "pointerup", "Pointer Event received.");
+                    });
+                    test_pointerEvent.done();
+                });
             }
         </script>
         <h1>Pointer Events pointerup tests</h1>
