--- a/pointerevents/pointerevent_releasepointercapture_onpointerup_mouse.html
+++ b/pointerevents/pointerevent_releasepointercapture_onpointerup_mouse.html
@@ -62,7 +62,7 @@
                     done();
                 });
 
-                on_event(document.body, 'pointerup', function(e) {
+                on_event(target0, 'pointerup', function(e) {
                     log("pointerup", target0);
                     pointerupGot = true;
                 });
