remove default radii from expected results & fix error in ellipse test that was calling testInlineStyle twice

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
@@ -21,7 +21,7 @@
                   "name": "No arguments",
                   "actual": "ellipse()",
                   "expected_inline": "ellipse(at 50% 50%)",
-                  "expected_computed": "ellipse(closest-side closest-side at 50% 50%)"
+                  "expected_computed": "ellipse(at 50% 50%)"
                 },
                 {
                   "name": "Radial arguments",
@@ -33,7 +33,7 @@
                    "name": "Position argument",
                    "actual": "ellipse(at 50px 50px)",
                    "expected_inline": "ellipse(at 50px 50px)",
-                   "expected_computed": "ellipse(closest-side closest-side at 50px 50px)"
+                   "expected_computed": "ellipse(at 50px 50px)"
                 },
                 {
                    "name": "Radial and position argument",
