--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
@@ -116,7 +116,7 @@
             ];
             generate_tests( ParsingUtils.testInlineStyle,
                             ParsingUtils.buildTestCases(valid_ellipse_radii_tests, "inline") );
-            generate_tests( ParsingUtils.testInlineStyle,
+            generate_tests( ParsingUtils.testComputedStyle,
                             ParsingUtils.buildTestCases(valid_ellipse_radii_tests, "computed") );
             </script>
     </body>
