Change pointerdown to pointercancel, increase timeout for svg.

--- a/pointerevents/pointerevent_touch-action-pan-x-pan-y-symmetry_touch.html
+++ b/pointerevents/pointerevent_touch-action-pan-x-pan-y-symmetry_touch.html
@@ -33,9 +33,9 @@
         <div>
             <div id="target1">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -46,9 +46,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -59,9 +59,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -72,9 +72,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -87,9 +87,9 @@
             </div>
             <div id="target0">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -100,9 +100,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -113,9 +113,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -126,9 +126,9 @@
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat. 
-                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit 
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+                    nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+                    Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
                     lobortis nisl ut aliquip ex ea commodo consequat.
                 </p>
                 <p>Lorem ipsum dolor sit amet...</p>
@@ -149,7 +149,6 @@
 
             var isSecondPart = false;
 
-            setup({ explicit_done: true });
             add_completion_callback(showPointerTypes);
 
             function run() {
@@ -162,7 +161,7 @@
                 xScr0 = target0.scrollLeft;
                 yScr0 = target0.scrollTop;
 
-                on_event(target0, 'pointerdown', function(event) {
+                on_event(target0, 'pointercancel', function(event) {
                     detected_pointertypes[event.pointerType] = true;
                 });
 
