--- a/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-type-extension-unresolved.html
+++ b/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-type-extension-unresolved.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Document.createElement() and Document.createElement() create custom element of type, specified by localName argument</title>
+<title>Document.createElement() and Document.createElementNS() create custom element of type, specified by localName argument</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="assert" content="If an element definition with matching localName, namespace, and TYPE is not registered with token's document, set TYPE to localName">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#extensions-to-document-interface-to-instantiate">
