--- a/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-namespace.html
+++ b/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-namespace.html
@@ -25,9 +25,19 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
+    var name = 'x-b';
+    var customElement = doc.createElement(name);
+    assert_equals(customElement.namespaceURI, HTML_NAMESPACE,
+        'Custom element namespace should be HTML Namespace');
+}, 'Test Document.createElement() sets custom element namespace to HTML Namespace ' +
+    'and an element definition with matching localName, namespace, and type is not registered');
+
+
+test(function() {
+    var doc = newHTMLDocument();
     HTML5_ELEMENTS.forEach(function(tagName) {
         var obj = doc.createElement(tagName);
-        var name = 'x-b-' + tagName;
+        var name = 'x-c-' + tagName;
         var proto = Object.create(obj.constructor.prototype);
         doc.registerElement(name, {
             prototype: Object.create(proto),
@@ -38,8 +48,22 @@ test(function() {
             'Custom element namespace for the element extending ' + tagName +
             ' should be HTML Namespace');
     });
-}, 'Document.createElement() sets custom element namespace to HTML Namespace. '+
+}, 'Document.createElement() sets custom element namespace to HTML Namespace. ' +
     'Custom element is extending standard HTML tag');
+
+
+test(function() {
+    var doc = newHTMLDocument();
+    HTML5_ELEMENTS.forEach(function(tagName) {
+        var name = 'x-d-' + tagName;
+        var customElement = doc.createElement(tagName, name);
+        assert_equals(customElement.namespaceURI, HTML_NAMESPACE,
+            'Custom element namespace for the element with tag name ' + tagName +
+            ' and type name ' + name + ' should be HTML Namespace');
+    });
+}, 'Document.createElement() sets custom element namespace to HTML Namespace. ' +
+    'Document.createElement() is called with standard HTML tag name and ' +
+    'type without registered custom element of such type');
 </script>
 </body>
 </html>
