--- a/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-type-extension-is-a-type.html
+++ b/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-type-extension-is-a-type.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Document.createElement() and Document.createElement() create custom element of type, specified by typeExtension argument</title>
+<title>Document.createElement() and Document.createElementNS() create custom element of type, specified by typeExtension argument</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="assert" content="Let TYPE be typeExtension, or localName if typeExtension is not present">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#extensions-to-document-interface-to-instantiate">
