removed closest-side from expected computed

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-000.html
@@ -21,7 +21,7 @@
               "name": "No arguments",
               "actual": "circle()",
               "expected_inline": "circle(at 50% 50%)",
-              "expected_computed": "circle(closest-side at 50% 50%)"
+              "expected_computed": "circle(at 50% 50%)"
             },
             {
               "name": "Radial argument only",
@@ -33,7 +33,7 @@
               "name": "Position argument only",
               "actual": "circle(at 50px 50px)",
               "expected_inline": "circle(at 50px 50px)",
-              "expected_computed": "circle(closest-side at 50px 50px)"
+              "expected_computed": "circle(at 50px 50px)"
             },
             {
               "name": "Radial and position argument",
