--- a/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-interface-type-is-a-local-name.html
+++ b/custom-elements/instantiating-custom-elements/extensions-to-document-interface/create-element-interface-type-is-a-local-name.html
@@ -3,7 +3,7 @@
 <head>
 <title>Document.createElement() and Document.createElementNS() create custom element of type, specified by localName argument</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
-<meta name="assert" content="Let interface be the element interface for TYPE as local name and namespace (HTML Namespace for createElement)">
+<meta name="assert" content="If an element definition with matching localName, namespace, and TYPE is not registered with token's document, set TYPE to localName">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#extensions-to-document-interface-to-instantiate">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -16,29 +16,29 @@
 test(function() {
     var doc = newHTMLDocument();
     var name1 = 'x-a';
-    var GeneratedConstructor1 = doc.registerElement(name1);
     var name2 = 'x-b';
-    var GeneratedConstructor2 = doc.registerElement(name2);
+    var GeneratedConstructor = doc.registerElement(name1);
     var customElement = doc.createElement(name1, name2);
 
-    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor1.prototype,
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
         'Custom element type should be the local name of the custom element');
 }, 'Test Document.createElement() creates custom element of type, ' +
-    'specified by localName argument');
+    'specified by localName argument, if an element definition with matching localName, ' +
+    'namespace, and type is not registered');
 
 
 test(function() {
     var doc = newHTMLDocument();
     var name1 = 'x-c';
-    var GeneratedConstructor1 = doc.registerElement(name1);
     var name2 = 'x-d';
-    var GeneratedConstructor2 = doc.registerElement(name2);
+    var GeneratedConstructor = doc.registerElement(name1);
     var customElement = doc.createElementNS(HTML_NAMESPACE, name1, name2);
 
-    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor1.prototype,
+    assert_equals(Object.getPrototypeOf(customElement), GeneratedConstructor.prototype,
         'Custom element type should be the local name of the custom element');
 }, 'Test Document.createElementNS() creates custom element of type, ' +
-    'specified by localName argument');
+    'specified by localName argument, if an element definition with matching ' +
+    'localName, namespace, and type is not registered');
 </script>
 </body>
 </html>
