replacing <script type="text/javascript"> with <script>

--- a/custom-elements/creating-and-passing-registries/share-registry-import-document.html
+++ b/custom-elements/creating-and-passing-registries/share-registry-import-document.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 var test1 = async_test('Registry of the import should share master document registry');
 test1.step(function() {
     var iframe = newIFrame('../resources/import-master.html');
