--- a/custom-elements/registering-custom-elements/definition-construction-algorithm-invalid-type.html
+++ b/custom-elements/registering-custom-elements/definition-construction-algorithm-invalid-type.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 test(function() {
     var doc = newHTMLDocument();
     assert_throws('SyntaxError', function() { doc.registerElement('1xa2'); },
