--- a/custom-elements/registering-custom-elements/unresolved-element-pseudoclass/unresolved-element-pseudoclass-css-test-registered-type-extension.html
+++ b/custom-elements/registering-custom-elements/unresolved-element-pseudoclass/unresolved-element-pseudoclass-css-test-registered-type-extension.html
@@ -16,7 +16,7 @@
         background-color: white;
     }
 </style>
-<script type="text/javascript">
+<script>
 function registerXElement() {
     var obj = document.createElement('a');
     var proto = Object.create(obj.constructor.prototype);
