--- a/custom-elements/registering-custom-elements/unresolved-elements-interface-html-unknown-element.html
+++ b/custom-elements/registering-custom-elements/unresolved-elements-interface-html-unknown-element.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 var MATHML_NAMESPACE = 'http://www.w3.org/1998/Math/MathML';
 
 test(function() {
