--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-invocation-order-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-invocation-order-test.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 function newPrototypeWithCallbackLog() {
     var proto = Object.create(HTMLElement.prototype);
     proto.callbackLog = [];
