--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-with-browsing-context-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-with-browsing-context-test.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = newHTMLElementPrototype();
     doc.registerElement('x-element', {prototype: proto});
