--- a/custom-elements/registering-custom-elements/element-registration-algorithm-no-registry.html
+++ b/custom-elements/registering-custom-elements/element-registration-algorithm-no-registry.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 test(function() {
     var doc = document.implementation.createDocument(null, 'test', null);
     assert_throws('NotSupportedError', function(){
