--- a/custom-elements/registering-custom-elements/unresolved-element-pseudoclass/unresolved-element-pseudoclass-matching-query-selector-all.html
+++ b/custom-elements/registering-custom-elements/unresolved-element-pseudoclass/unresolved-element-pseudoclass-matching-query-selector-all.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 test(function() {
     var doc = newHTMLDocument();
     doc.body.innerHTML = '<x-a></x-a>';
