--- a/custom-elements/registering-custom-elements/unresolved-elements-interface-svg-element.html
+++ b/custom-elements/registering-custom-elements/unresolved-elements-interface-svg-element.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="log"></div>
-<script type="text/javascript">
+<script>
 test(function() {
     var doc = newHTMLDocument();
     var xsvg = doc.createElementNS(SVG_NAMESPACE, 'x-svg');
