Fixed incorrect use of animate() method in AnimationTimeline.play() tests

--- a/web-animations/animation-timeline/animation-timeline-get-animation-players-sort-order-test.html
+++ b/web-animations/animation-timeline/animation-timeline-get-animation-players-sort-order-test.html
@@ -10,12 +10,18 @@
 <body>
 <div id="log"></div>
 <script>
+function newAnimationPlayer(doc) {
+    var animationTarget = doc.createElement('div');
+    doc.body.appendChild(animationTarget);
+    var animation = new Animation(animationTarget, [], 5);
+    return doc.timeline.play(animation);
+}
+
 test(function() {
     var doc = newHTMLDocument();
-    var animationTarget = doc.createElement('div');
-    var player1 = doc.timeline.play(animationTarget.animate(null));
-    var player2 = doc.timeline.play(animationTarget.animate(null));
-    var player3 = doc.timeline.play(animationTarget.animate(null));
+    var player1 = newAnimationPlayer(doc);
+    var player2 = newAnimationPlayer(doc);
+    var player3 = newAnimationPlayer(doc);
 
     assert_array_equals(document.timeline.getAnimationPlayers(), [player1, player2, player3],
         'Set of objects returned by AnimationTimeline.getAnimationPlayers() method ' +
@@ -26,16 +32,12 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var animationTarget = doc.createElement('div');
-    doc.body.appendChild(animationTarget);
-    var player1 = doc.timeline.play(animationTarget.animate(null));
-    var player2 = doc.timeline.play(animationTarget.animate(null));
+    var player1 = newAnimationPlayer(doc);
+    var player2 = newAnimationPlayer(doc);
 
     var doc2 = newHTMLDocument();
-    var animationTarget2 = doc2.createElement('div');
-    doc2.body.appendChild(animationTarget);
-    var player3 = doc2.timeline.play(animationTarget2.animate(null));
-    var player4 = doc2.timeline.play(animationTarget2.animate(null));
+    var player3 = newAnimationPlayer(doc2);
+    var player4 = newAnimationPlayer(doc2);
 
     assert_array_equals(doc.timeline.getAnimationPlayers(), [player1, player2],
         'Set of objects returned by AnimationTimeline.getAnimationPlayers() method ' +
