--- a/web-animations/animation-timeline/animation-timeline-play-timeline-test.html
+++ b/web-animations/animation-timeline/animation-timeline-play-timeline-test.html
@@ -10,11 +10,17 @@
 <body>
 <div id="log"></div>
 <script>
-test(function() {
-    var doc = newHTMLDocument();
+function newAnimationPlayer(doc) {
     var animationTarget = doc.createElement('div');
     doc.body.appendChild(animationTarget);
-    var player = doc.timeline.play(animationTarget.animate(null));
+    var animation = new Animation(animationTarget, [], 5);
+    return doc.timeline.play(animation);
+}
+
+
+test(function() {
+    var doc = newHTMLDocument();
+    var player = newAnimationPlayer(doc);
 
     assert_equals(player.timeline, doc.timeline,
         'The timeline attribute of the newly-created AnimationPlayer object ' +
@@ -25,9 +31,7 @@ test(function() {
 
 test(function() {
     var doc = newHTMLDocument();
-    var animationTarget = doc.createElement('div');
-    doc.body.appendChild(animationTarget);
-    var player = doc.timeline.play(animationTarget.animate(null));
+    var player = newAnimationPlayer(doc);
 
     assert_equals(player.startTime, doc.timeline.currentTime,
         'Start time of the newly-created AnimationPlayer object should be set ' +
