tests for overwriting win.opener and accessing it x-domain

--- a/html/browsers/the-window-object/security-window/support/window-opener-popup.html
+++ b/html/browsers/the-window-object/security-window/support/window-opener-popup.html
@@ -38,7 +38,7 @@
             code += 'opener = ' + tests[testidx].value_str;
             code += ';\nsetting_throws = false;}catch(e){setting_throws = true;}';
             code += '\nsetting_succeeds = opener === '+ tests[testidx].value_str
-            console.log(code);
+            //console.log(code);
             document.open();
             document.write('<script>'+code+'<\/script>');
             document.close();
