post refactor cleanup: fixed support file links in compositing suite

--- a/compositing-1/mix-blend-mode/mix-blend-mode-parsing.html
+++ b/compositing-1/mix-blend-mode/mix-blend-mode-parsing.html
@@ -10,7 +10,7 @@
         <meta name="assert" content="Test checks that the value specified for mix-blend-mode property is correctly parsed">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <link rel="stylesheet" href="/resource/testharness.css">
+        <link rel="stylesheet" href="/resources/testharness.css">
     </head>
     <body>
         <div id="log"></div>
