--- a/compositing-1/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
+++ b/compositing-1/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
@@ -8,7 +8,7 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode having a child blends with the parent element.">
         <meta name="flags" content=""/>
-        <link rel="match" href="reference/green-box.html">
+        <link rel="match" href="reference/green-square.html">
         <style type="text/css">
             div {
                 width: 100px;
